gallery image added

--- a/courses.html
+++ b/courses.html
@@ -31,6 +31,8 @@
         <link rel="stylesheet" type="text/css" href="style.css"> <!-- This stylesheet dynamically changed from style.less -->
         <!-- responsive css -->
         <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+        <!-- magnific popup css -->
+        <link rel="stylesheet" type="text/css" href="assets/css/magnific-popup.css">
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -500,6 +502,34 @@
 </div>
 <!-- Popular Courses Section End -->
 
+<div class="rs-gallery pt-100 pb-100 md-pt-70 md-pb-70">
+    <div class="container">
+        <h2 class="title text-center">Robotics and Artificial intelligence</h2>
+       <div class="row margin-0">
+           <div class="col-lg-6 mb-30 col-md-6">
+                <div class="gallery-img">
+                    <a class="image-popup" href="assets/images/rai1.jpeg"><img src="assets/images/rai1.jpeg" alt=""></a>
+                </div>
+           </div>
+           <div class="col-lg-6 mb-30 col-md-6">
+                <div class="gallery-img">
+                    <a class="image-popup" href="assets/images/rai2.jpeg"><img src="assets/images/rai2.jpeg" alt=""></a>
+                </div>
+           </div>
+           <div class="col-lg-6 mb-30 col-md-6">
+                <div class="gallery-img">
+                    <a class="image-popup" href="assets/images/rai3.jpeg"><img src="assets/images/rai3.jpeg" alt=""></a>
+                </div>
+           </div>
+           <div class="col-lg-6 mb-30 col-md-6">
+                <div class="gallery-img">
+                    <a class="image-popup" href="assets/images/rai4.jpeg"><img src="assets/images/rai4.jpeg" alt=""></a>
+                </div>
+           </div>
+           
+       </div>
+    </div> 
+</div>
 
             <!-- CTA Section Start -->
             <div class="rs-cta section-wrap gray-bg4">
