--- a/gallery.html
+++ b/gallery.html
@@ -162,84 +162,174 @@
             </div>
             <!-- Breadcrumbs End -->
 
-              <!-- Events Section Start -->
-              <div class="rs-gallery pt-100 pb-100 md-pt-70 md-pb-70">
+
+            
+            <!-- Popular Courses Section Start -->
+            <div id="rs-popular-courses" class="rs-popular-courses style1 orange-color pt-100 pb-100 md-pt-70 md-pb-70">
                 <div class="container">
-                   <div class="row margin-0">
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">
-                                <a class="image-popup" href="assets/images/gallery/4.jpeg"><img src="assets/images/gallery/4.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">
-                                <a class="image-popup" href="assets/images/gallery/5.jpeg"><img src="assets/images/gallery/5.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/6.jpeg"><img src="assets/images/gallery/6.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/7.jpeg"><img src="assets/images/gallery/7.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/8.jpeg"><img src="assets/images/gallery/8.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/9.jpeg"><img src="assets/images/gallery/9.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/11.jpeg"><img src="assets/images/gallery/11.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/12.jpeg"><img src="assets/images/gallery/12.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/13.jpeg"><img src="assets/images/gallery/13.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/14.jpeg"><img src="assets/images/gallery/14.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/15.jpeg"><img src="assets/images/gallery/15.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/17.jpeg"><img src="assets/images/gallery/17.jpeg" alt=""></a>
-                            </div>
-                       </div>                       
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/10.jpeg"><img src="assets/images/gallery/10.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                       <div class="col-lg-4 mb-0 padding-0 col-md-6">
-                            <div class="gallery-img">                                
-                                <a class="image-popup" href="assets/images/gallery/16.jpeg"><img src="assets/images/gallery/16.jpeg" alt=""></a>
-                            </div>
-                       </div>
-                   </div>
-                </div> 
+                    <div class="gridFilter text-center mb-50">
+                        <button class="active" data-filter="*">ALL</button>
+                        <button data-filter=".filter2">Ayudha Pooja 2023</button>
+                        <button data-filter=".filter1">Award Ceremony 2023</button>
+                    </div>
+                    <div class="row grid">
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/1.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/1.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/2.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/2.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/3.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/3.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/4.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/4.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/5.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/5.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/6.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/6.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/7.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/7.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/8.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/8.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/9.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/9.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/10.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/10.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/11.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/11.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/12.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/12.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/13.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/13.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/14.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/14.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/15.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/15.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter2">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/ayudha-pooja-23/16.jpeg"><img src="assets/images/gallery/ayudha-pooja-23/16.jpeg" alt=""></a>
+                             </div>
+                        </div>
+
+
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/4.jpeg"><img src="assets/images/gallery/4.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">
+                                 <a class="image-popup" href="assets/images/gallery/5.jpeg"><img src="assets/images/gallery/5.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">                                
+                                 <a class="image-popup" href="assets/images/gallery/6.jpeg"><img src="assets/images/gallery/6.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">                                
+                                 <a class="image-popup" href="assets/images/gallery/7.jpeg"><img src="assets/images/gallery/7.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">                                
+                                 <a class="image-popup" href="assets/images/gallery/8.jpeg"><img src="assets/images/gallery/8.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">                                
+                                 <a class="image-popup" href="assets/images/gallery/9.jpeg"><img src="assets/images/gallery/9.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">                                
+                                 <a class="image-popup" href="assets/images/gallery/11.jpeg"><img src="assets/images/gallery/11.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">                                
+                                 <a class="image-popup" href="assets/images/gallery/12.jpeg"><img src="assets/images/gallery/12.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">                                
+                                 <a class="image-popup" href="assets/images/gallery/13.jpeg"><img src="assets/images/gallery/13.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">                                
+                                 <a class="image-popup" href="assets/images/gallery/14.jpeg"><img src="assets/images/gallery/14.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">                                
+                                 <a class="image-popup" href="assets/images/gallery/15.jpeg"><img src="assets/images/gallery/15.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">                                
+                                 <a class="image-popup" href="assets/images/gallery/17.jpeg"><img src="assets/images/gallery/17.jpeg" alt=""></a>
+                             </div>
+                        </div>                       
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">                                
+                                 <a class="image-popup" href="assets/images/gallery/10.jpeg"><img src="assets/images/gallery/10.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 grid-item filter1">
+                             <div class="gallery-img">                                
+                                 <a class="image-popup" href="assets/images/gallery/16.jpeg"><img src="assets/images/gallery/16.jpeg" alt=""></a>
+                             </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!-- Events Section End -->  
+            <!-- Popular Courses Section End -->
+
 
 
             <!-- Team Section Start -->
@@ -396,6 +486,10 @@
         <script src="assets/js/rsmenu-main.js"></script> 
         <!-- op nav js -->
         <script src="assets/js/jquery.nav.js"></script>
+        <!-- isotope.pkgd.min js -->
+        <script src="assets/js/isotope.pkgd.min.js"></script>
+        <!-- imagesloaded.pkgd.min js -->
+        <script src="assets/js/imagesloaded.pkgd.min.js"></script>   
         <!-- wow js -->
         <script src="assets/js/wow.min.js"></script>     
         <!-- plugins js -->
