--- a/courses.html
+++ b/courses.html
@@ -525,11 +525,25 @@
                 <div class="gallery-img">
                     <a class="image-popup" href="assets/images/rai4.jpeg"><img src="assets/images/rai4.jpeg" alt=""></a>
                 </div>
-           </div>
-           
+           </div>           
        </div>
     </div> 
 </div>
+
+
+<div class="rs-gallery pt-100 pb-100 md-pt-70 md-pb-70">
+    <div class="container">
+        <h2 class="title text-center">Art & Craft</h2>
+       <div class="row margin-0">
+           <div class="col-lg-6 mb-30 col-md-6 m-auto">
+                <div class="gallery-img">
+                    <a class="image-popup" href="assets/images/arts.jpeg"><img src="assets/images/arts.jpeg" alt=""></a>
+                </div>
+           </div>
+       </div>
+    </div> 
+</div>
+
 
             <!-- CTA Section Start -->
             <div class="rs-cta section-wrap gray-bg4">
